--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,40 +1,46 @@
 <h1>index</h1>
 <p><%= link_to "new", new_product_path %></p>
+<p><%= link_to "logout", destroy_user_session_path, method: :delete %></p>
 <table class="table">
 		<h2>Product</h2>
 		<thead>
 			<tr>
+				<th>ID</th>
 				<th>Product_name</th>
 				<th>Product_phonetic</th>
+				<th>Artist</th>
+				<th>Label</th>
 				<th>Product_price</th>
 				<th>Stock</th>
 				<th>Description</th>
 				<th>Release</th>
 				<th>Disc_amount</th>
-				<th>Artist</th>
-				<th>Label</th>
 				<th>Genre</th>
 				<th>Disc_Number</th>
+				<th>Jacket</th>
 			</tr>
 		</thead>
 		<tbody>
 			<% @products.each do |product| %>
 				<tr>
+					<td><%= product.id %></td>
 					<td><%= product.product_name %></td>
 					<td><%= product.product_phonetic %></td>
+					<td><%= product.artist.artist_name %></td>
+					<td><%= product.label.label_name %></td>
+					<td><%= product.genre.genre_name %></td>
 					<td><%= product.product_price %></td>
 					<td><%= product.stock %></td>
 					<td><%= product.description %></td>
 					<td><%= product.release %></td>
 					<td><%= product.disc_amount %></td>
-					<td><%= product.artist.artist_name %></td>
-					<td><%= product.label.label_name %></td>
-					<td><%= product.genre.genre_name %></td>
 					<td>
 						<% product.discs.each do |disc| %>
 							<%= disc.id %>
 						<% end %>
 					</td>
+					<td><%= image_tag product.image_id.url(:thumb) unless product.image_id.blank? %></td>
+					<td><%= link_to '削除', product_path(product.id), method: :delete %>
 				</tr>
 			<% end %>
 		</tbody>
