--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,20 @@
 
 <!-- main部分 -->
 <div class="top-main">
+<div class="sidebar-space"></div>
 	<div class="genre-box">
 		<div class="genre-title">
-			<p class="genre-title-text">カテゴリー</p>
+			<p class="genre-title-text">カテゴリーで探す</p>
 		</div>
-		<div>
-			<p>※genreの折り返し処理</p>
-		</div>
+		<ul class="genre-list">
+		<li class="genre-list-item">J-Pop</li>
+		<li class="genre-list-item">ロック</li>
+		<li class="genre-list-item">ジャズ</li>
+		<li class="genre-list-item">カントリー</li>
+		<li class="genre-list-item">ブルース</li>
+		<li class="genre-list-item">クラブ</li>
+		<li class="genre-list-item">アニメ</li>
+		</ul>
 	</div>
 	<div class="top-box2">
 		<div class="product-detail">
@@ -33,15 +40,50 @@
 
 			</div>
 			<div class="product-detail-field2">
-				<p>商品説明欄</p>
+				<p>商品説明欄（高さ自動調整実装予定）<br>xxxxxxxxxx<br>xxxxxxxxxxxx<br>xxxxxxxxxxxx<br>xxxxxxxxxxx</p>
+			</div>
+			<div class="product-detail-field3">
+				<p>曲一覧（高さ自動調整実装予定）<br>xxxxxxxxxx<br>xxxxxxxxxxxx<br>xxxxxxxxxxxx<br>xxxxxxxxxxx<br>xxxxxxxxxx<br>xxxxxxxxxxxx<br>xxxxxxxxxxxx<br>xxxxxxxxxxx<br>xxxxxxxxxx</p>
 			</div>
 		</div>
 		<div class="product-comment">
 			<p>コメントをスクロール表示</p>
 		</div>
-
+		<div class="product-comment-newbox">
+			<p>コメント投稿フォーム・星での評価を実装予定</p>
+		</div>
 		<div class="newproduct-space3">
-			<p>発売日が最も新しいProductを5つ表示</p>
+			<div class="product-heading">新着一覧</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">発売日</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">発売日</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">発売日</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">発売日</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
+			<div class="rankin-product">
+				<div class="ranking-integer">発売日</div>
+				<div class="ranking-image"></div>
+				<div class="ranking-artist-text"><p>Artist名</p></div>
+				<div class="ranking-product-text"><p>商品名</p></div>
+			</div>
 		</div>
 	</div>
 </div>
