--- a/app/views/products/top.html.erb
+++ b/app/views/products/top.html.erb
@@ -1,5 +1,6 @@
 <!-- main部分 -->
 <div class="top-main">
+	<div class="sidebar-space"></div>
 	<div class="genre-box">
 		<div class="genre-title">
 			<p class="genre-title-text">カテゴリーで探す</p>
@@ -26,7 +27,6 @@
 		    </div>
 
 		    <div class="swiper-pagination"></div>
-		      
 		    <div class="swiper-button-prev"></div>
 		    <div class="swiper-button-next"></div>
 		  </div>
