--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <title>SquareMusic</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/css/swiper.min.css">
   </head>
 
@@ -33,7 +33,7 @@
 <!-- タイトルdiv -->
 		<div class="header-sub">
 			<div class="header-text2">
-				<p class="header-text3">ようこそ＜USER＞<!-- ログインユーザー名を表示予定 -->さん</p>
+				<p class="header-text3">ようこそ!＜USER＞<!-- ログインユーザー名を表示予定 -->さん</p>
 			</div>
 			<h1 class="header-text1"><a href="/" style="text-decoration: none;color: white">SQUARE MUSIC</a></h1>
 			<div class="search-sample">
