--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -376,7 +376,7 @@ header{
   background-color:  #c0c0c0;
 }
 .sidebar-space{
-  width: 300px;
+  width: 22%;
   background-color: #c0c0c0;
   height: 1000px;
   float: left;
