--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,9 +46,8 @@
 <%= yield %>
 <footer>
 		<div class="footer-text">
-			<p>©︎SQUARE MUSIC</p>
 		</div>
-</footer>
+</footer clearfix>
   </body>
 
 </html>
