--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -7,8 +7,8 @@
     <%= devise_error_messages! %>
       <tr>
         <div class="field">
-          <th><%= f.label :メールアドレス %><br /></th>
-          <th><%= f.email_field :email, autofocus: true, autocomplete: "email" %></th>
+          <td class="td_color"><%= f.label :メールアドレス %><br /></td>
+          <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
         </div>
       </tr>
   </table>
