--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -2,42 +2,42 @@
 <div class="headline_box">
   <h2 class="useredit_headline">登録情報編集 </h2>
 </div>
-<table class="edit_table">
+<table class="edit_table" border="1">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <tr>
     <div class="field">
-      <th><%= f.label :氏名 %><br /></th>
-      <th><%= f.text_field :user_name%></th>
+      <td class="td_color"><%= f.label :氏名 %><br /></td>
+      <td><%= f.text_field :user_name%></td>
     </div>
   </tr>
   <tr>
     <div class="field">
-      <td><%= f.label :フリガナ %><br /></td>
+      <td class="td_color"><%= f.label :フリガナ %><br /></td>
       <td><%= f.text_field :user_phonetic %></td>
     </div>
   </tr>
   <tr>
     <div class="field">
-      <td><%= f.label :郵便番号 %><br /></td>
+      <td class="td_color"><%= f.label :郵便番号 %><br /></td>
       <td><%= f.text_field :postal %></td>
     </div>
   </tr>
   <tr>
     <div class="field">
-      <td><%= f.label :住所 %><br /></td>
+      <td class="td_color"><%= f.label :住所 %><br /></td>
       <td><%= f.text_field :address %></td>
     </div>
   </tr>
   <tr>
     <div class="field">
-      <td><%= f.label :電話番号 %><br /></td>
+      <td class="td_color"><%= f.label :電話番号 %><br /></td>
       <td><%= f.text_field :tell %></td>
     </div>
   </tr>
   <tr>
     <div class="field">
-      <td><%= f.label :メールアドレス %><br /></td>
+      <td class="td_color"><%= f.label :メールアドレス %><br /></td>
       <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
     </div>
   </tr>
@@ -47,7 +47,7 @@
   <% end %>
   <tr>
     <div class="field">
-      <td><%= f.label :新規パスワード %> <i>(変更したくない場合には、空白のままにして下さい)</i><br /></td>
+      <td class="td_color"><%= f.label :新規パスワード %> <div><i>(変更したくない場合には、空白のままにして下さい)</i></div><br /></td>
       <td><%= f.password_field :password, autocomplete: "off" %>
       <% if @minimum_password_length %>
         <br />
@@ -57,13 +57,13 @@
   </tr>
   <tr>
     <div class="field">
-      <td><%= f.label :新規パスワード確認 %><br /></td>
+      <td class="td_color"><%= f.label :新規パスワード確認 %><br /></td>
       <td><%= f.password_field :password_confirmation, autocomplete: "off" %></td>
     </div>
   </tr>
   <tr>
     <div class="field">
-      <td><%= f.label :現在のパスワード %> <i>(変更を確認するために現在のパスワードが必要です)</i><br /></td>
+      <td class="td_color"><%= f.label :現在のパスワード %> <div><i>(変更を確認するために現在のパスワードが必要です)</i></div><br /></td>
       <td><%= f.password_field :current_password, autocomplete: "off" %></td>
     </div>
   </tr>
